panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__execute__preprocessor__test_null_directive_at_end_of_file_without_newline.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/preprocessor/test_null_directive_at_end_of_file_without_newline.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement)))

----- stderr -----
